개발자 계정 만들기 영상 추가

--- a/3.개발자 계정 만들기.md
+++ b/3.개발자 계정 만들기.md
@@ -1,5 +1,9 @@
 # 3. 개발자 계정 만들기
 
+## 듀토리얼 영상
+
+[50초짜리 듀토리얼 영상을 따라해서 개발자 계정 만들기](https://youtu.be/omay3IZHNhk)
+
 ## 계정 생성하기
 
 새 개발자 계정을 만들려면 IC SDK 도구 dfx를 사용한다:
