--- a/4. Cycle 공짜로 얻기.md
+++ b/4. Cycle 공짜로 얻기.md
@@ -1,6 +1,28 @@
 # Cycle 공짜로 얻기
 
+## Cycle이란
+
+인터넷 컴퓨터 프로토콜은 전 세계에 분산된 독립적인 노드 공급자(NP) 커뮤니티에 의해 소유 및 운영되는 노드 네트워크에서 실행됩다. NP는 노드 운영에 돈을 지출한다. 즉, 하드웨어를 구매하고 전기와 네트워크 대역폭이 필요하다. 인터넷 컴퓨터 프로토콜은 ICP 토큰의 형태로 보상을 조달하고 분배함으로써 NP를 매월 보상한다.
+
+ICP의 지속 가능성을 위해 캐니스터는 소비하는 리소스에 대한 대가로 지불해야 한다. 예를 들어, 저장 공간과 계산에 대한 것이다. 리소스 소비는 ICP 토큰이 아닌 사이클로 지불된다. 일반적으로 캐니스터의 개발자가 캐니스터에 사이클을 충전한다. 캐니스터를 사용함에 따라 사이클 잔액이 계속해서 감소한다. 결국 카니스터는 더 많은 사이클로 **충전**되어야 한다. 사이클을 얻는 기본 방법은 ICP 토큰을 사이클로 변환하는 것이다. 이를 수행할 때 프로토콜은 ICP 토큰을 소각한다.
+
+### 사이클이 ICP 토큰의 다른점
+
+ICP 토큰의 가치는 변동적이지만, 사이클은 그렇지 않다. 사이클은 여러 가지 피아트 통화로 이루어진 XDR에 페그되어 있다. 이것은 ICP에서 리소스 소비, 예를 들어 스마트 계약 실행,이 다소 안정된 가격을 갖는다는 이점이 있다.
+
+사이클은 수조 및 수천억과 같이 매우 큰 수로 측정된다. 사이클 이체 및 보충에 대해 이야기할 때 일반적으로 수조 사이클을 사용한다.
+
+이 안내서에서는 메인넷에 dapp을 배포하는 데 사용할 수 있는 10T의 무료 사이클을 획득하는 방법을 설명한다.
+
+## 선행학습
+
 **Cycle을 얻기전에 3. 개발자 계정 만들기를 선행한다**
+
+## 듀토리얼 영상
+
+[Cycle을 얻는 듀토리얼 영상 참고하기](https://www.youtube.com/watch?v=JR1TVAwcpJU)
+
+> 영상 속도가 빠를 수 있다. 재생속도를 늦춰서 시청해주길 바란다.
 
 ## 쿠폰 받기
 
@@ -33,7 +55,7 @@ Discord 서버 내부로 이동한 후 `#cycles-faucet` 채널로 이동한다.
 
 작성을 완료하면 제출이 승인되면 faucet 봇이 쿠폰 코드가 포함된 개인 메시지를 보낸다.
 
-> > > 다른 사용자로부터 직접 메시지를 수신할 수 있도록 Discord 설정이 활성화되어 있어야 된다. 이 설정이 활성화되지 않은 경우 faucet 봇으로부터 직접 메시지를 받을 수 없다.
+> 다른 사용자로부터 직접 메시지를 수신할 수 있도록 Discord 설정이 활성화되어 있어야 된다. 이 설정이 활성화되지 않은 경우 faucet 봇으로부터 직접 메시지를 받을 수 없다.
 
 ### Step6
 
@@ -78,6 +100,3 @@ dfx cycles --network ic redeem-faucet-coupon <your-coupon-code>
 - 마지막 단계는 쿠폰이 올바르게 교환되었는지 확인하기 위해 `dfx cycles --network ic balance` 명령을 사용하여 잔액을 확인한다:
 
 ![alt text](https://internetcomputer.org/assets/images/faucet_step_6-19dd3dccd7eb7757da3ffd8c211055b6.png)
-
-- Cyle 설명
-- [Cycle 받기 (총 7 스텝)](https://internetcomputer.org/docs/current/developer-docs/getting-started/cycles/cycles-faucet#step-1-get-a-coupon)
