프로젝트 템플렛에 Windows 11 영상  추가

--- a/5. 프로젝트 템플렛 만들기.md
+++ b/5. 프로젝트 템플렛 만들기.md
@@ -2,6 +2,7 @@
 
 ## 듀토리얼
 
+- [1분 52초 짜리 영상 따라해서 Windows 11에서 로컬 캐니스터 배포하기](https://youtu.be/Mxel1usC5TM)
 - [40초짜리 듀토리얼 영상 따라해서 로컬 캐니스터 배포하기](https://youtu.be/5tYS-UdmMfI)
 
 ## Hello World! 프로젝트 만들기
