튜토리얼 영상 변경

--- a/3.개발자 계정 만들기.md
+++ b/3.개발자 계정 만들기.md
@@ -1,8 +1,8 @@
 # 3. 개발자 계정 만들기
 
-## 듀토리얼 영상
+## 튜토리얼 영상
 
-[50초짜리 듀토리얼 영상을 따라해서 개발자 계정 만들기](https://youtu.be/omay3IZHNhk)
+[50초짜리 튜토리얼 영상을 따라해서 개발자 계정 만들기](https://www.youtube.com/watch?v=oo-nLzcTOQM)
 
 ## 계정 생성하기
 
