프로젝트 생성 명령어 오타 수정

--- a/5. 프로젝트 템플렛 만들기.md
+++ b/5. 프로젝트 템플렛 만들기.md
@@ -1,16 +1,16 @@
 # 프로젝트 템플렛 만들기
 
-## 듀토리얼
+## 튜토리얼
 
 - [1분 52초 짜리 영상 따라해서 Windows 11에서 로컬 캐니스터 배포하기](https://youtu.be/Mxel1usC5TM)
-- [40초짜리 듀토리얼 영상 따라해서 로컬 캐니스터 배포하기](https://youtu.be/5tYS-UdmMfI)
+- [40초짜리 튜토리얼 영상 따라해서 로컬 캐니스터 배포하기](https://youtu.be/5tYS-UdmMfI)
 
 ## Hello World! 프로젝트 만들기
 
 아래 명령어를 실행한다 간단한 `Hello World!` 프로젝트를 만든다:
 
 ```sh
-dfx project new <project name>
+dfx new <project name>
 ```
 
 `dfx new <project name>` 명령은 새 프로젝트 디렉토리, 템플릿 파일 및 새 `<project name>` Git 저장소를 프로젝트에 만든다.
