--- a/2. Azle CDK 설치하기.md
+++ b/2. Azle CDK 설치하기.md
@@ -1,6 +1,6 @@
 # Azle CDK 설치하기
 
-## 듀토리얼
+## 튜토리얼
 
 [1분 52초 짜리 영상 따라해서 Windows 11에서 로컬 캐니스터 배포하기](https://youtu.be/Mxel1usC5TM?si=Ty4s172UBtUSBCFI&t=30)
 
