--- a/6. 메인넷에 배포하기.md
+++ b/6. 메인넷에 배포하기.md
@@ -1,8 +1,8 @@
 # 메인넷에 배포하기
 
-## 듀토리얼
+## 튜토리얼
 
-[36초짜리 듀토리얼 영상 따라해서 메인넷에 캐니스터 배포하기](https://youtu.be/O_X3jDf80Yk)
+[36초짜리 튜토리얼 영상 따라해서 메인넷에 캐니스터 배포하기](https://youtu.be/O_X3jDf80Yk)
 
 ## 메인넷 연결 확인
 
